--- a/package.json
+++ b/package.json
@@ -52,24 +52,24 @@
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.0.8",
     "lodash.clonedeep": "^4.5.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-pose": "^4.0.6",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-pose": "^4.0.7",
     "react-router-dom": "^4.3.1",
     "react-toastify": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.2",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/plugin-transform-runtime": "^7.0.0-rc.2",
     "@babel/preset-env": "^7.0.0-rc.2",
     "@babel/preset-react": "^7.0.0-rc.2",
     "@babel/register": "^7.0.0-rc.2",
     "@babel/runtime": "^7.0.0-rc.2",
-    "acorn": "^6.0.6",
+    "acorn": "^6.1.0",
     "ansi-magenta": "^0.1.1",
-    "autoprefixer": "^9.1.2",
-    "ava": "^1.2.0",
+    "autoprefixer": "^9.4.8",
+    "ava": "^1.2.1",
     "babel-loader": "^8.0.0-beta",
     "beeper": "^1.1.1",
     "css-loader": "^2.1.0",
@@ -77,7 +77,7 @@
     "del": "^3.0.0",
     "doctoc": "^1.3.0",
     "fancy-log": "^1.3.2",
-    "firebase-tools": "^6.3.0",
+    "firebase-tools": "^6.4.0",
     "fs-extra": "^7.0.0",
     "gulp": "^4.0.0",
     "gulp-cheerio": "^0.6.2",
@@ -93,7 +93,7 @@
     "gulp-size": "^3.0.0",
     "gulp-svg-symbols": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "inquirer": "^6.1.0",
+    "inquirer": "^6.2.2",
     "local-web-server": "^2.6.0",
     "merge-stream": "^1.0.1",
     "mini-css-extract-plugin": "^0.5.0",
@@ -104,11 +104,11 @@
     "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.1",
-    "webpack": "^4.17.0",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-dev-server": "^3.1.14",
+    "webpack": "^4.29.5",
+    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-dev-server": "^3.2.0",
     "webpack-pwa-manifest": "^4.0.0",
     "workbox-webpack-plugin": "^3.6.3",
-    "yargs": "^12.0.1"
+    "yargs": "^13.2.1"
   }
 }
